--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,8 @@
 bind v split-window -v -c '#{pane_current_path}'
 bind h split-window -h -c '#{pane_current_path}'
 
-# vim-like pane switching
+# Vim-like pane switching
 bind -r k select-pane -U
 bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+# bind -r h select-pane -L
+# bind -r l select-pane -R
