style (.vimrc): remove custom tabline comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
 # Set 'v' for vertical and 'h' for horizontal split
-bind v split-window -v -c '#{pane_current_path}'
-bind h split-window -h -c '#{pane_current_path}'
+# bind v split-window -v -c '#{pane_current_path}'
+# bind h split-window -h -c '#{pane_current_path}'
 
 # Vim-like pane switching
-bind -r k select-pane -U
-bind -r j select-pane -D
+# bind -r k select-pane -U
+# bind -r j select-pane -D
 # bind -r h select-pane -L
 # bind -r l select-pane -R
