--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,2 +1,7 @@
 # Use the default shell.
 set-option -g default-shell $SHELL
+
+# Customize right side of the status bar.
+# The string is formatted according to strftime(),
+# part of the C standard library.
+set -g status-right "%A, %b. %d %H:%M"
