--- a/src/.inputrc
+++ b/src/.inputrc
@@ -1,3 +1,10 @@
 set completion-ignore-case on
+
+# Do not ask 'Display all `n` possibilities?' (y or n)
+# when entering tab on an empty prompt.
+# set completion-query-items 0
+# set page-completions off
+
 set show-all-if-ambiguous on
+
 TAB: menu-complete
