feat (.vimrc): remove comment autocommands

--- a/src/.inputrc
+++ b/src/.inputrc
@@ -1,10 +1,8 @@
 set completion-ignore-case on
 
-# Do not ask 'Display all `n` possibilities?' (y or n)
-# when entering tab on an empty prompt.
-# set completion-query-items 0
-# set page-completions off
-
 set show-all-if-ambiguous on
 
+set editing-mode vi
+
+# Cycle through each option after successively pressing the tab key.
 TAB: menu-complete
