--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,5 +1,17 @@
+# Create a new window with the current working directory.
+bind c new-window -c "#{pane_current_path}"
+
+# Create a horizontal split with the current working directory.
+bind % split-window -h -c "#{pane_current_path}"
+
+# Create a vertical split with the current working directory.
+bind \" split-window -v -c "#{pane_current_path}"
+
 # Use the default shell.
 set-option -g default-shell $SHELL
+
+# Use vi keys in copy mode.
+setw -g mode-keys vi
 
 # Customize right side of the status bar.
 # The string is formatted according to strftime(),
