--- a/src/.shellrc
+++ b/src/.shellrc
@@ -2,26 +2,13 @@
 # both bash and zsh.
 # Take a look at .bashrc or .zshrc for a better understanding.
 
-# alias cl='clear'
-alias cdl='cl && cd'
-alias cld='cdl'
-
 # -i: Cause cp to write a prompt before copying a file that would overwrite an existing file.
 alias cp='cp -i'
-alias du='du -sh'
-alias gc='git commit -a -m'
-alias gf='git fetch'
-alias gp='git push'
-# alias gs='git status'
-alias la='ls -a'
-alias ln='ln -is'
-alias ls='ls -lFhG'
+alias ls='ls -lFh --color=always'
 alias mdc='movies download current'
 alias mdn='movies download next'
 alias mp='movies play'
 alias mv='mv -i'
-alias vvi='vim ~/.vimrc'
-alias vzs='vim ~/.zshrc'
 
 alias llvm-mca='/usr/local/Cellar/llvm/*/bin/llvm-mca'
 alias sql='sqlite3'
@@ -46,7 +33,7 @@ alias tcl='htclsh'
 alias hvi='/usr/local/Cellar/vim/*/bin/vi'
 alias hvim='/usr/local/Cellar/vim/*/bin/vim'
 
-export CLICOLOR=1
+# export CLICOLOR=1
 export PATH="$PATH:/Library/Frameworks/Python.framework/Versions/3.10/bin"
 export PATH="$PATH:/usr/local/bin"
 export PATH="$PATH:/usr/bin"
@@ -71,13 +58,7 @@ export PATH="$PATH:$HOME/Qt/6.5.2/macos/bin/"
 
 export notes="$HOME/Desktop/notes"
 
-# Remote folders.
-icloud="$HOME/Library/Mobile Documents/com~apple~CloudDocs/mkh"
-textbooks="$icloud/Documents/PDF/Textbooks/Computer Eng."
-uni="$icloud/Documents/PDF/Uni/Courses/5th"
+# Use as follows:
+# $ top -stats $keys
+keys='pid,command,cpu,csw,time,mem,state,uid'
 
-# Local folders.
-db="$HOME/Documents/Databases"
-movies="$HOME/Movies/Mine/movies"
-prj="$HOME/Desktop/projects"
-series="$HOME/Movies/Mine/series"
