--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -16,4 +16,4 @@ setw -g mode-keys vi
 # Customize right side of the status bar.
 # The string is formatted according to strftime(),
 # part of the C standard library.
-set -g status-right "%A, %b. %d %H:%M"
+set -g status-right "%a %b %d %H:%M"
