feat (.bashrc): add `alias curl`

--- a/src/.shellrc
+++ b/src/.shellrc
@@ -2,21 +2,32 @@
 # both bash and zsh.
 # Take a look at .bashrc or .zshrc for a better understanding.
 
-# -i: Cause cp to write a prompt before copying a file that would overwrite an existing file.
+# -i: Cause cp to write a prompt before copying a file that 
+# would overwrite an existing file.
 alias cp='cp -i'
 alias ls='ls -lFh --color=always'
-alias mdc='movies download current'
-alias mdn='movies download next'
-alias mp='movies play'
 alias mv='mv -i'
 
 alias llvm-mca='/usr/local/Cellar/llvm/*/bin/llvm-mca'
-alias sql='sqlite3'
 alias vlc='/Applications/VLC.app/Contents/MacOS/VLC'
+
+# -L, --location: Follow the request onto the last location.
+# -O, --remote-name: Write output to a local file named like 
+# the remote file we get.
+# -C -, --continue-at -: Continue the download where left off.
+# -f, --fail: Fail silently.
+alias curl='curl -L -O -C - -f --retry 5 --retry-all-errors --retry-max-time 120'
+# alias curl='curl \
+  # --location \
+  # --remote-name \
+  # --continue-at -'
 
 # -fs: full screen
 # -autoexit: quit after video ends.
-alias mffplay='ffplay -fs -autoexit -loglevel warning -stats'
+alias ffplay='ffplay -fs -autoexit -loglevel warning -stats'
+
+alias top='top -stats pid,command,cpu,csw,threads,time,mem,state,uid \
+  -s 2 -n 20'
 
 # Default macOS Vim.
 alias dtclsh='/usr/bin/tclsh'
@@ -25,12 +36,6 @@ alias dvim='/usr/bin/vim'
 
 alias hpython3='/usr/local/bin/python3'
 alias hruby='/usr/local/Cellar/ruby/*/bin/ruby'
-alias htclsh='/usr/local/bin/tclsh'
-alias tcl='htclsh'
-
-# Homebrew versions which conflict with system-provided tools.
-alias hvi='/usr/local/Cellar/vim/*/bin/vi'
-alias hvim='/usr/local/Cellar/vim/*/bin/vim'
 
 # export CLICOLOR=1
 export PATH="$PATH:/Library/Frameworks/Python.framework/Versions/3.10/bin"
@@ -56,8 +61,4 @@ export PATH="$PATH:/Library/TeX/texbin"
 export PATH="$PATH:$HOME/Qt/6.5.2/macos/bin/"
 
 export HOMEBREW_NO_ENV_HINTS=1
-
-# Use as follows:
-# $ top -stats $keys
-keys='pid,command,cpu,csw,threads,time,mem,state,uid'
 
